--- a/styles/globals.css
+++ b/styles/globals.css
@@ -46,3 +46,5 @@ a {
 @import url("./client/Signup.css");
 @import url("./loading.css");
 @import url("./client/Login.css");
+@import url("./home.css");
+@import url("./footer.css");
