--- a/styles/loading.css
+++ b/styles/loading.css
@@ -1,24 +1,24 @@
-.loading{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.loading svg{
-    font-size: 5px;
-    font-weight: 900;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    animation: text 1s ease-in-out infinite;
-}
-@keyframes text{
-    50%{ opacity: 0.1;}
-}
-.loading polygon{
-    stroke-dasharray: 22;
-    stroke-dashoffset: 1;
-    animation: dash 4s cubic-bezier(0.455, 0.03, 0.515, 0.955)
-    infinite alternate-reverse;
-}
-@keyframes dash{
-    to{stroke-dashoffset: 234;}
-}
+.loading {
+    width: 100vw;
+    height: 100vh;
+    background-color: white;
+    display: grid;
+    place-items: center;
+    max-width: 100%;
+  }
+  
+  .loading > div {
+    width: 10vmax;
+    height: 10vmax;
+    border-bottom: 5px solid rgba(0, 0, 0, 0.719);
+  
+    border-radius: 50%;
+  
+    animation: loadingRotate 800ms linear infinite;
+  }
+  
+  @keyframes loadingRotate {
+    to {
+      transform: rotateZ(-360deg);
+    }
+  }
