--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Caveat&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Birthstone&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap");
 html,
 body {
   padding: 0;
@@ -45,6 +47,12 @@ a {
 .mt-3 {
   margin-top: 30px;
 }
+.mt-1 {
+  margin-top: 10px;
+}
+.mt-5 {
+  margin-top: 50px;
+}
 .mt-7 {
   margin-top: 70px;
 }
@@ -60,3 +68,4 @@ a {
 @import url("./home.css");
 @import url("./footer.css");
 @import url("./nav.css");
+@import url("./about.css");
